<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:outlineAmbientShadowColor="#331E1E"
    tools:context=".DetailFragment">

    <EditText
        android:id="@+id/selectEditTextId2"
        android:layout_width="345dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/selectEdit1"
        android:ems="10"
        android:hint="@string/selectEdit1"
        android:inputType="textPersonName"
        android:textColor="#0E0E0E"
        android:textColorHint="#0E0E0E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectEditTextId" />

    <EditText
        android:id="@+id/selectEditTextId"
        android:layout_width="345dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/selectEdit1"
        android:ems="10"
        android:hint="@string/selectEdit1"
        android:inputType="textPersonName"
        android:textColor="#171617"
        android:textColorHint="#0E0E0E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectImageId" />

    <Button
        android:id="@+id/selectButtonSaveId"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        android:text="@string/selectSaveButton"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/selectButtonId"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectEditTextId2" />

    <Button
        android:id="@+id/selectButtonId"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:fallbackLineSpacing="false"
        android:hapticFeedbackEnabled="false"
        android:text="@string/selectButton"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectButtonSaveId"
        app:layout_constraintTop_toBottomOf="@+id/selectEditTextId2" />

    <TextView
        android:id="@+id/selectHeaderId"
        android:layout_width="345dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/selectedHeaderId"
        android:textColor="#121112"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/selectImageId"
        android:layout_width="345dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/selectedImages"
        android:src="@drawable/images_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectHeaderId"
        app:srcCompat="@drawable/images_icon"
        tools:srcCompat="@drawable/images_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>
